# QuEST

./: .gitignore  CMakeLists.txt
QuEST/: CMakeLists.txt
QuEST/src/: QuEST_internal.h
QuEST/src/CPU/: QuEST_cpu.c  QuEST_cpu_distributed.c
QuEST/src/GPU/: QuEST_gpu.cu
benchmarks/: dj-benchmark.txt  dj-benchmark1.txt  dj.1.N27.mpiP  dj.8.N30.mpiP  grover-benchmark-part1.txt  grover-benchmark-part2.txt  rqc-benchmark.txt  rqc-plus-2.txt  rqc-plus.txt  shor-benchmark.txt  weak-dj-bench-data2.txt  weak-dj-bench-part1.txt  weak-dj-bench-part2.txt  weak-dj-bench-part3.txt  weak-rqc-bench.txt  weak-single-qubit-gates-1-36.txt  weak-single-qubit-gates-2.txt  weak-single-qubit-gates.txt
benchmarks/memory-time-tracking/: dj.128.N34.mpiP  dj.16.N31.mpiP  dj.2.N28.mpiP  dj.32.N32.mpiP  dj.4.N29.mpiP  dj.64.N33.mpiP  memory-plot.py
benchmarks/output-files/: dj-benchmark.txt  grover-benchmark-part1.txt  grover-benchmark-part2.txt  rqc-benchmark-intel.txt  rqc-benchmark.txt  rqc-plus-intel.txt  rqc-plus-quest.txt  shor-benchmark.txt  weak-dj-bench-data2.txt  weak-dj-bench-part1.txt  weak-dj-bench-part2.txt  weak-dj-bench.txt  weak-rqc-bench.txt  weak-single-qubit-gates-1-18_intel.txt  weak-single-qubit-gates-1-18_quest.txt  weak-single-qubit-gates-1-36_intel.txt  weak-single-qubit-gates-1-36_quest.txt  weak-single-qubit-gates-2-18_intel.txt  weak-single-qubit-gates-2-18_quest.txt
benchmarks/plot-programs/: dj-plot.py  grover-plot.py  rqc-plot-speedup.py  rqc-plot.py  rqc-plus-plot.py  shor-plot.py  shor-plt.py  weak-dj-plot.py  weak-rqc-plot.py  weak-sqg-plot.py
benchmarks/updated-plots/files/: dj_full_intel.txt  dj_full_quest.txt  rqc_full_intel.txt  rqc_full_quest.txt  shor_full_quest.txt
benchmarks/updated-plots/programs/: dj-plot-new.py  grover-plot-new.py  rqc-plot-new.py  shor-plot-new.py
docs/: jquery.js
examples/: bernstein_vazirani_circuit.c
examples_giulia/: CMakeLists.txt  approx-pf.cpp  approx-pf.hpp  dj.cpp  dj.hpp  ghadamard.c  ghadamard.cpp  grover.cpp  grover.hpp  gtest.cpp  math_util.hpp  period-finding.cpp  period-finding.hpp  qft.cpp  qft.hpp  shor.cpp  shor.hpp  single-qubit-gates.cpp
examples_giulia/marko-scripts/: generate_numbers.py  generate_scripts.sh  mm_comparison.sh
randomQC/: CMakeLists.txt  rqc.cpp
randomQC/cz_v2/10x10/: inst_10x10_11_1.txt  inst_10x10_11_2.txt  (+628 more)
scripts/: cmake_piz_daint.script  experiment.sh  load_compile.sh  makefile-gpu-piz_daint  merge_files.py  piz_daint-cuda.run  prepare_experiment.py  run-dj.sh  run-grover.sh  run-rqc-plus.sh  run-rqc.sh  run-shor.sh  run.sh  script_1.out  script_16.out  script_32.out  slurm-12836840.out  slurm-13302880.out  slurm-13302884.out  slurm-13302899.out  slurm-13302900.out  slurm-13346228.out  slurm-dj1.out  slurm-dj2.out  slurm-dj512.out  slurm-grover1.out  slurm-grover2.out  slurm-grover3.out  slurm-shor1.out  slurm-sqg1.out  slurm-weak-dj.out  slurm-weak-rqc.out  sqg-regex-error.out  submit.py  submit2.py  weaj-dj128.sh  weak-dj.sh  weak-dj128.sh  weak-dj256.sh  weak-dj512.sh  (+3 more)
scripts/21:05:2019-17:28:20/: dj_1.txt  dj_128.txt  dj_2.txt  dj_32.txt  dj_4.txt  dj_64.txt  dj_8.txt  grover_128.txt  grover_4.txt  rqc_1.txt  rqc_16.txt  rqc_2.txt  rqc_32.txt  rqc_8.txt  script_1.sh  script_128.sh  script_2.sh  script_32.sh  script_4.sh  shor_128.txt  shor_16.txt  shor_32.txt
scripts/24:05:2019-11:15:06/: dj_128.txt  dj_2.txt  dj_32.txt  dj_64.txt  dj_8.txt  grover_1.txt  grover_128.txt  grover_4.txt  merge.py  script_1.out  script_1.sh  script_128.out  script_128.sh  script_2.out  script_32.out  script_32.sh  script_4.out  script_4.sh  script_8.sh  shor_16.txt  shor_64.txt
scripts/old-scripts/: run.sh  slurm-dj1.out  slurm-dj2.out  slurm-grover1.out  slurm-grover2.out  slurm-grover3.out  slurm-rqc.out  slurm-shor1.out
scripts/results_1/: dj_16.txt  dj_full.txt  grover_1.txt  grover_16.txt  grover_2.txt  grover_32.txt  grover_8.txt  merge.py  rqc_128.txt  rqc_4.txt  rqc_64.txt  rqc_full.txt  script_128.out  script_2.out  script_4.out  script_64.out  script_64.sh  script_8.out  script_8.sh  shor_8.txt
scripts/results_1_intel/: dj_1.txt  dj_128.txt  dj_16.txt  dj_2.txt  dj_32.txt  dj_4.txt  dj_64.txt  dj_8.txt  dj_full.txt  merge.py  rqc_1.txt  rqc_128.txt  rqc_16.txt  rqc_2.txt  rqc_32.txt  rqc_4.txt  rqc_64.txt  rqc_8.txt  rqc_full.txt  script_1.out  script_1.sh  script_128.out  script_128.sh  script_16.out  script_16.sh  script_2.out  script_2.sh  script_32.out  script_32.sh  script_4.out  script_4.sh  script_64.out  script_64.sh  script_8.out  script_8.sh
scripts/results_1_quest/: dj_1.txt  dj_128.txt  dj_16.txt  dj_2.txt  dj_32.txt  dj_4.txt  dj_64.txt  dj_8.txt  grover_1.txt  grover_128.txt  grover_16.txt  grover_2.txt  grover_32.txt  grover_4.txt  grover_full.txt  merge.py  rqc_1.txt  rqc_128.txt  rqc_16.txt  rqc_2.txt  rqc_32.txt  rqc_4.txt  rqc_64.txt  rqc_8.txt  script_1.out  script_128.out  script_16.out  script_16.sh  script_2.out  script_32.out  script_4.out  script_64.out  script_8.out  shor_16.txt  shor_32.txt  shor_8.txt
scripts/results_2/: dj_16.txt  dj_4.txt  grover_16.txt  grover_2.txt  grover_32.txt  grover_64.txt  script_16.out  script_64.out  script_8.out  shor_128.txt  shor_32.txt  shor_4.txt
scripts/results_2_intel/: merge.py  rqc_1.txt  rqc_128.txt  rqc_16.txt  rqc_2.txt  rqc_32.txt  rqc_4.txt  rqc_64.txt  rqc_8.txt  rqc_full.txt  script_1.out  script_1.sh  script_128.out  script_128.sh  script_16.out  script_16.sh  script_2.out  script_2.sh  script_32.out  script_32.sh  script_4.out  script_4.sh  script_64.out  script_64.sh  script_8.out  script_8.sh
scripts/results_2_quest/: dj_1.txt  dj_128.txt  dj_16.txt  dj_32.txt  dj_4.txt  dj_64.txt  dj_8.txt  dj_full.txt  grover_1.txt  grover_128.txt  grover_16.txt  grover_2.txt  grover_32.txt  grover_4.txt  grover_64.txt  grover_8.txt  grover_full.txt  merge.py  script_1.out  script_128.out  script_16.out  script_16.sh  script_2.out  script_2.sh  script_32.out  script_4.out  script_64.out  script_64.sh  script_8.out  shor_128.txt  shor_16.txt  shor_32.txt  shor_64.txt  shor_8.txt  shor_full.txt
(+9446 files in other folders)
